k8s/base/gitops/flux-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-ui-ingress
  namespace: flux-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /flux(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: weave-gitops
            port:
              number: 9001
